--- a/adaptive-images/travel-agency/css/cards.css
+++ b/adaptive-images/travel-agency/css/cards.css
@@ -26,3 +26,53 @@
     width: 20%;
   }
 }
+
+@media (max-width: 479px) {
+  
+  .card {
+    width: 100%;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 640px) {
+  .card:nth-child(3n+3) {
+    width: 100%;
+  }
+}
+
+@media (min-width: 641px) and (max-width: 960px) {
+
+  .card:nth-child(5n-2),
+  .card:nth-child(5n-3),
+  .card:nth-child(5n-4) {
+    width: 33.33%;
+  }
+}
+
+@media (min-width: 961px) and (max-width: 1280px) {
+  .card:nth-child(5),
+  .card:nth-child(6),
+  .card:nth-child(11),
+  .card:nth-child(12) {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1281px) {
+
+  .card:nth-child(6),
+  .card:nth-child(7),
+  .card:nth-child(8),
+  .card:nth-child(14),
+  .card:nth-child(15),
+  .card:nth-child(16) {
+    width: 33.33%;
+  }
+
+  .card:nth-child(17),
+  .card:nth-child(18),
+  .card:nth-child(19),
+  .card:nth-child(20) {
+    width: 25%;
+  }
+}
