--- a/breakpoints/travel-agency/css/page.css
+++ b/breakpoints/travel-agency/css/page.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   max-width: 1920px;
   margin-left: auto;
   margin-right: auto;
@@ -9,7 +9,7 @@
 
 .card {
   font-size: 20px;
-}
+} */
 
 @media (min-width: 1300px) {
   
@@ -36,6 +36,11 @@
 }
 
 @media (max-width: 479px) {
+
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+  }
   
   .card {
     width: 100%;
